--- a/css/style.css
+++ b/css/style.css
@@ -27,15 +27,15 @@ body {
   background: -webkit-gradient(linear, left top, right top, from(#cb11ab), to(#481173));
   background: linear-gradient(90deg, #cb11ab, #481173);
 }
-body.__lock {
-  overflow: hidden;
-}
 
 a, a:hover, a:visited, a:active {
   text-decoration: none;
   cursor: pointer;
 }
 
+a:visited, a:active {
+  color: rgb(255, 255, 255);
+}
 
 button {
   padding: 0;
@@ -88,12 +88,13 @@ button {
 /*! Overlay
 /*!_________________________________________________________________*/
 .overlay {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: black;
   width: 100%;
   height: 100vh;
+  opacity: 0.5;
   position: fixed;
-  visibility: hidden;
-  top: 0;
+  z-index: 1;
+  display: none;
 }
 
 /*! Modal
@@ -120,8 +121,11 @@ ___________________________________________*/
 ___________________________________________*/
 /*! Header
 /*!_________________________________________________________________*/
+#delivery {
+  display: none;
+}
+
 .s-header {
-  height: 60px;
   padding: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -136,19 +140,24 @@ ___________________________________________*/
 .s-header__burger-wrapper {
   border: 2px solid rgba(255, 255, 255, 0.3);
   border-radius: 25%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 5px;
   width: 35px;
   height: 35px;
-  font-size: 35px;
-  color: rgba(255, 255, 255, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   cursor: pointer;
 }
-
-.s-header__burger-wrapper:hover{
+.s-header__burger-wrapper:hover {
   border: 2px solid rgb(255, 255, 255);
+}
+.s-header__burger-wrapper:hover .fa-bars {
   color: rgb(255, 255, 255);
 }
 .s-header__logo-text-wrapper {
@@ -182,14 +191,13 @@ ___________________________________________*/
           justify-content: center;
   width: 55%;
 }
+.s-header__form:hover {
+  background: rgba(255, 255, 255, 0.6);
+  border: 2px solid rgba(255, 255, 255, 0.6);
+}
 .s-header__form__submit {
   margin-right: 5px;
-  color: #fff;
 }
-.s-header__form:hover{
-  background: rgba(255, 255, 255, 0.6);
-}
-
 .s-header__form__search-inp {
   height: 50px;
   background-color: transparent;
@@ -199,8 +207,20 @@ ___________________________________________*/
 .s-header__form__search-inp:focus {
   outline: none;
 }
-.s-header__form__search-inp::placeholder{
-  color: rgba(255, 255, 255, 0.8);
+.s-header__form__search-inp::-webkit-input-placeholder {
+  color: white;
+}
+.s-header__form__search-inp::-moz-placeholder {
+  color: white;
+}
+.s-header__form__search-inp:-ms-input-placeholder {
+  color: white;
+}
+.s-header__form__search-inp::-ms-input-placeholder {
+  color: white;
+}
+.s-header__form__search-inp::placeholder {
+  color: white;
 }
 .s-header__nav-item-wrapper {
   display: -webkit-box;
@@ -212,8 +232,39 @@ ___________________________________________*/
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  cursor: pointer;
 }
 .s-header__nav-item-wrapper__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+}
+.s-header__nav-item-wrapper__item:hover .s-header__nav-item-wrapper__item__svg-wrapper__text {
+  opacity: 1;
+}
+.s-header__nav-item-wrapper__item:not(:last-child) {
+  margin-right: 15px;
+}
+
+.fa-bars {
+  font-size: 35px;
+  color: rgba(255, 255, 255, 0.3);
+}
+.fa-bars:hover {
+  color: rgb(255, 255, 255);
+}
+
+.fa-magnifying-glass {
+  color: white;
+}
+
+.fa-cart-shopping, .fa-user {
+  font-size: 21px;
+  margin-bottom: 10px;
+}
+
+.s-header__nav-item-wrapper__item__icon-wrapper__text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -227,23 +278,10 @@ ___________________________________________*/
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 50%;
-  padding: 5px 0 0 0;
-}
-.s-header__nav-item-wrapper__item:not(:last-child) {
-  margin-right: 15px;
-}
-.s-header__nav-item-wrapper__item__icon-wrapper__text {
-  color: rgba(255, 255, 255, 0.5);
-  cursor: pointer;
+  color: rgba(255, 255, 255, 0.3);
 }
 .s-header__nav-item-wrapper__item__icon-wrapper__text:hover {
   color: rgb(255, 255, 255);
-}
-.nav_icons{
-  font-size: 20px;
-  text-align: center;
-  margin: 0 0 10px 0 ;
 }
 
 /* Center
@@ -260,7 +298,15 @@ ___________________________________________*/
   border: 1px solid white;
   border-radius: 24px;
   background-color: white;
-  position: relative;
+}
+
+.fa-star {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 /* Slider
@@ -284,34 +330,60 @@ ___________________________________________*/
 }
 
 .slider_btn {
-  width: 50px;
-  height: 50px;
+  width: 5%;
+  height: 100%;
+  border: none;
   position: absolute;
-  border-radius: 50%;
   background: #fff;
-  top: calc(50% - 25px);
+  opacity: 0.5;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 25px;
-  cursor: pointer;
-
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .slider_btn:hover {
-  color: #cb11ab;
+  background: #cb11ab;
+  opacity: 0.9;
+  -webkit-transition: linear 0.5s;
+  transition: linear 0.5s;
 }
 
 .slider_btn_prev {
   bottom: 0;
-  left: 1%;
+  left: 0;
+  cursor: pointer;
 }
 
 .slider_btn_next {
   bottom: 0;
-  right: 1%;
+  right: 0;
+  cursor: pointer;
 }
 
+.slider_btn_text {
+  font-size: 50px;
+  font-weight: 900;
+  color: #cb11ab;
+}
+
+.slider_btn_prev:hover #slider_arrow__left {
+  color: #e8ecee;
+}
+
+.slider_btn_next:hover #slider_arrow__right {
+  color: #e8ecee;
+}
+
+#slider_arrow__left, #slider_next {
+  font-size: 45px;
+  color: #cb11ab;
+}
 
 /* Cards
 ___________________________________________*/
@@ -332,23 +404,20 @@ ___________________________________________*/
 }
 .s-cards__item-wrapper {
   width: 100%;
-  height: 600px;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
-  overflow: hidden;
-  transition: all 1s;
-}
-.s-cards__item-wrapper_active{
-  height: calc((4 * 300px) + 50px);
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .s-cards__item-wrapper__item {
-  width: 100%;
-  height: 300px;
+  width: 23%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -362,13 +431,14 @@ ___________________________________________*/
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin: 0 0 25px 0;
 }
-
+.s-cards__item-wrapper__item:not(:nth-child(4n+4)) {
+  margin-right: 25px;
+}
 .s-cards__item-wrapper__item-img {
   width: 100%;
-  max-height: 50%;
-  object-fit: cover;
-
+  margin-bottom: 1%;
 }
 .s-cards__item-wrapper__item__wrapper-text {
   width: 100%;
@@ -376,6 +446,21 @@ ___________________________________________*/
 }
 .s-cards__item-wrapper__item__wrapper-text__delivery-time {
   text-align: start;
+}
+.s-cards__item-wrapper__item__wrapper-text__svg-wrapper, .modal-cart-det__desc-wrap__svg-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 5px;
+}
+.s-cards__item-wrapper__item__wrapper-text__svg-wrapper__svg, .modal-cart-det__desc-wrap__svg-wrapper__svg {
+  width: 25px;
+  height: 25px;
+}
+.s-cards__item-wrapper__item__wrapper-text__svg-wrapper__rate, .modal-cart-det__desc-wrap__svg-wrapper__rate {
+  width: 25px;
+  height: 25px;
+  font-size: 25px;
 }
 .s-cards__item-wrapper__item__btn, .modal-cart-det__desc-wrap__btn {
   color: white;
@@ -393,42 +478,45 @@ ___________________________________________*/
   color: #cb11ab;
   font-weight: 600;
   margin: 50px 0;
+}
+.s-cards__btn-show_more {
+  margin-right: 1%;
+}
+.s-cards__btn__svg-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #cb11ab;
 }
-.s-cards__btn-show_more{
-  margin: 0 15px 0 0 ;
+.s-cards__btn__svg-wrapper__svg {
+  width: 15px;
+  height: 15px;
+  fill: #cb11ab;
 }
 
-/* ArrowUP
-___________________________________________*/
-
-.arrow_top{
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background: rgb(203, 17, 171);
+.hit {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center; 
-  position: fixed;
-  left: 5%;
-  bottom: 70%;
-  color: #fff;
-  cursor: pointer;
-  visibility: hidden;
-  opacity: 0;
-  transition: all 0.5s;
-}
-.arrow_top:hover{
-  background: rgba(203, 17, 171, 0.8);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-weight: 600;
+  font-size: 35px;
+  color: #cb11ab;
+  margin-bottom: 25px;
 }
 
-.arrow_top.active{
-  visibility: visible;
-  opacity: 1;
-  bottom: 15%;
-}
 /* Center
 ___________________________________________*/
 /* Color
@@ -482,6 +570,12 @@ ___________________________________________*/
 .s-footer__item__row-title {
   color: white;
   opacity: 1;
+  cursor: default;
+  margin-bottom: 1%;
+}
+
+.footer-adapt {
+  display: none;
 }
 
 /* Center
@@ -497,22 +591,20 @@ ___________________________________________*/
 /*! Asaide
 /*!_________________________________________________________________*/
 .aside {
-  width: 20%;
-  position: fixed;
-  display: block;
+  height: 100vh;
+  width: 200px;
+  position: absolute;
+  top: 106px;
+  left: 0;
   z-index: 2;
-  top: 110px;
   background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  visibility: hidden;
-  transform: translateX(-100%);
-  transition: all 0.6s ease-in-out;
-  padding: 10px 0;
 }
 .aside__item {
   display: -webkit-box;
@@ -528,12 +620,14 @@ ___________________________________________*/
   padding: 0 5px 0 5px;
 }
 .aside__item:hover {
-  background-color: rgba(211, 211, 211, 0.3);
-  transition: all 0.3s ease-in-out;
+  background-color: lightgrey;
 }
-.active_aside{
-  visibility: visible;
-  transform: translateX(0);
+.aside__item__svg {
+  width: 15px;
+}
+
+.aside {
+  display: none;
 }
 
 /*! Modal User
@@ -732,62 +826,135 @@ ___________________________________________*/
 /*! Media
 /*!_________________________________________________________________*/
 @media (max-width: 1450px) {
-  .s-cards__item-wrapper {
-    grid-template-columns: repeat(4, 1fr);
+  .s-cards__item-wrapper__item {
+    width: 21%;
+  }
+  .s-cards__item-wrapper__item:not(:nth-child(4n+4)) {
+    margin-right: 20px;
+  }
+  .s-cards__item-wrapper__item__wrapper-text__svg-wrapper__svg, .modal-cart-det__desc-wrap__svg-wrapper__svg {
+    width: 17px;
+    height: 17px;
+  }
+  .s-cards__item-wrapper__item__wrapper-text__svg-wrapper__rate, .modal-cart-det__desc-wrap__svg-wrapper__rate {
+    width: 17px;
+    height: 17px;
+    font-size: 17px;
   }
 }
 @media (max-width: 1075px) {
-  /*Header*/
   .s-header__logo-text-wrapper {
     display: none;
   }
-  .aside{
-    width: 40%;
-  }
-  /*Slider*/
   .slider_btn_text {
     font-size: 30px;
   }
-  /*Cards*/
   .s-cards__btn, .modal-s-cart__btn {
     height: 45px;
   }
+  #slider_prev {
+    display: none;
+  }
+  #slider_next {
+    display: none;
+  }
+  .hit {
+    font-size: 25px;
+  }
 }
-@media (max-width: 630px) {
-  /*Header*/
+@media (max-width: 795px) {
   .s-header__form {
     margin: 0 15px 0 15px;
   }
-  /*Cards*/
-  .s-cards__item-wrapper {
-    grid-template-columns: repeat(2, 1fr);
+  .s-cards__item-wrapper__item {
+    width: 40%;
+    margin: 0 15px 15px;
+  }
+  .s-cards__item-wrapper__item:not(:nth-child(4n+4)) {
+    margin-right: 15px;
   }
 }
 @media (max-width: 610px) {
   .s-cards__btn, .modal-s-cart__btn {
     width: 60%;
   }
-  /*Footer*/
-  .s-footer {
+  .s-footer, .footer {
+    display: none;
+  }
+  .main {
+    border-radius: 24px 24px 0 0;
+  }
+  .s-header__burger-wrapper {
+    display: none;
+  }
+  .s-header__nav-item-wrapper {
+    display: none;
+  }
+  .s-header__form {
+    width: 100%;
+  }
+  .footer-adapt {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    background: -webkit-gradient(linear, left top, right top, from(#cb11ab), to(#481173));
+    background: linear-gradient(90deg, #cb11ab, #481173);
+    width: 100vw;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
   }
-  .s-footer__item {
-    width: 50%;
-    margin-bottom: 5%;
+  .footer-adapt__wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 10px;
+  }
+  .footer-adapt__wrap__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 33.3%;
+  }
+  .footer-adapt__wrap__item .fa-solid {
+    font-size: 25px;
+    margin: 0;
+    color: rgba(255, 255, 255, 0.3);
   }
 }
 @media (max-width: 500px) {
-  /*Cards*/
   .s-cards__item-wrapper__item {
     width: 90%;
-    margin: 0 10px;
+    margin: 0 10px 10px;
   }
   .s-cards__item-wrapper__item:not(:nth-child(4n+4)) {
     margin-right: 10px;
+  }
+  .s-cards__item-wrapper__item__wrapper-text {
+    text-align: center;
+  }
+  .s-cards__item-wrapper__item__wrapper-text__delivery-time {
+    text-align: center;
+  }
+  .s-cards__item-wrapper__item__wrapper-text__svg-wrapper, .modal-cart-det__desc-wrap__svg-wrapper {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .s-cards__item-wrapper__item__btn, .modal-cart-det__desc-wrap__btn {
+    width: 100%;
   }
 }
 @media (max-width: 450px) {
@@ -810,11 +977,5 @@ ___________________________________________*/
   }
   .s-header__nav-item-wrapper__item:not(:last-child) {
     margin: 0 0 0 auto;
-  }
-  .aside{
-    width: 100%;
-  }
-  .s-cards__item-wrapper {
-    grid-template-columns: repeat(1, 1fr);
   }
 }
