--- a/scss/media.scss
+++ b/scss/media.scss
@@ -3,7 +3,7 @@
 /*! Media
 /*!_________________________________________________________________*/
 @media (max-width: 1450px){
-    .s-cards__item-wrapper__item{width: 21%; margin: 0 20px;
+    .s-cards__item-wrapper__item{width: 21%;
         &:not(:nth-child(4n+4)){margin-right: 20px;}
     }
     .s-cards__item-wrapper__item__wrapper-text__svg-wrapper{
@@ -12,33 +12,44 @@
     }
 }
 @media (max-width: 1075px){
-    /*Header*/
     .s-header__logo-text-wrapper{display: none;}
-    /*Slider*/
     .slider_btn_text{font-size: 30px;}
-    /*Cards*/
     .s-cards__btn{height: 45px;}
+    #slider_prev{display: none;}
+    #slider_next{display: none;}
+    .hit{font-size: 25px;}
 }
-@media (max-width: 630px){
-    /*Header*/
+@media (max-width: 795px){
     .s-header__form{margin: 0 15px 0 15px;}
-    /*Cards*/
-    .s-cards__item-wrapper__item{width: 40%; margin: 0 15px;
+    .s-cards__item-wrapper__item{width: 40%; margin: 0 15px 15px;
         &:not(:nth-child(4n+4)){margin-right: 15px;}
     }
 }
 @media (max-width: 610px){
     .s-cards__btn{width: 60%;}
-    /*Footer*/
-    .s-footer{display: flex; flex-wrap: wrap;
-        &__item{width: 50%; margin-bottom: 5%;}
+    .s-footer, .footer{display: none;}
+    .main{border-radius: 24px 24px 0 0;}
+    .s-header__burger-wrapper{display: none;}
+    .s-header__nav-item-wrapper{display: none;}
+    .s-header__form{width: 100%;}
+    .footer-adapt{display: flex; background: linear-gradient(90deg, $pinkWB,#481173); width: 100vw; height: 50px; position: fixed; bottom: 0;
+        &__wrap{display: flex; @include flexCenter; margin: 10px;
+            &__item{display: flex; align-items: flex-end; justify-content: center; width: 33.3%;
+                .fa-solid{font-size: 25px; margin: 0; color: $adaptFooterHover;
+                }
+            }
+        }
     }
 }
 @media (max-width: 500px){
-    /*Cards*/
-    .s-cards__item-wrapper__item{width: 90%; margin: 0 10px;
+    .s-cards__item-wrapper__item{width: 90%; margin: 0 10px 10px;
         &:not(:nth-child(4n+4)){margin-right: 10px;}
     }
+    .s-cards__item-wrapper__item__wrapper-text{text-align: center;
+        &__delivery-time{text-align: center;}
+        &__svg-wrapper{justify-content: center;}
+    }
+    .s-cards__item-wrapper__item__btn{width: 100%;}
 }
 @media (max-width: 450px){
     .s-header{flex-wrap: wrap;}
