--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,12 @@ ___________________________________________*/
           box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0%;
 }
 
@@ -27,14 +32,16 @@ body {
   background: -webkit-gradient(linear, left top, right top, from(#cb11ab), to(#481173));
   background: linear-gradient(90deg, #cb11ab, #481173);
 }
-
-a, a:hover, a:visited, a:active {
-  text-decoration: none;
-  cursor: pointer;
+body.__lock {
+  overflow: hidden;
 }
 
-a:visited, a:active {
-  color: rgb(255, 255, 255);
+a,
+a:hover,
+a:visited,
+a:active {
+  text-decoration: none;
+  cursor: pointer;
 }
 
 button {
@@ -46,8 +53,12 @@ button {
   cursor: pointer;
 }
 
-.aside__item {
-  color: black;
+ul, li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 /*! Container
@@ -83,18 +94,15 @@ button {
   border: 1.5px solid #cb11ab;
 }
 
-/*! Footer
-/*!_________________________________________________________________*/
 /*! Overlay
 /*!_________________________________________________________________*/
 .overlay {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
   height: 100vh;
-  opacity: 0.5;
   position: fixed;
-  z-index: 1;
-  display: none;
+  visibility: hidden;
+  top: 0;
 }
 
 /*! Modal
@@ -107,6 +115,41 @@ button {
 /*!_________________________________________________________________*/
 .cards-text {
   color: black;
+}
+
+/*! Arrow Top
+/*!_________________________________________________________________*/
+.arrow_top {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: rgb(153, 9, 129);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: fixed;
+  left: 5%;
+  bottom: 70%;
+  color: #fff;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+.arrow_top.active {
+  visibility: visible;
+  opacity: 1;
+  bottom: 15%;
+}
+.arrow_top:hover {
+  background: rgba(153, 9, 129, 0.8);
 }
 
 /* Center
@@ -136,6 +179,7 @@ ___________________________________________*/
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  height: 60px;
 }
 .s-header__burger-wrapper {
   border: 2px solid rgba(255, 255, 255, 0.3);
@@ -152,12 +196,15 @@ ___________________________________________*/
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 35px;
+  text-align: center;
   cursor: pointer;
 }
 .s-header__burger-wrapper:hover {
   border: 2px solid rgb(255, 255, 255);
 }
-.s-header__burger-wrapper:hover .fa-bars {
+.s-header__burger-wrapper:hover {
   color: rgb(255, 255, 255);
 }
 .s-header__logo-text-wrapper {
@@ -195,13 +242,15 @@ ___________________________________________*/
   background: rgba(255, 255, 255, 0.6);
   border: 2px solid rgba(255, 255, 255, 0.6);
 }
-.s-header__form__submit {
-  margin-right: 5px;
+.s-header__form__search-btn {
+  color: #fff;
 }
 .s-header__form__search-inp {
   height: 50px;
   background-color: transparent;
   border: none;
+  color: #fff;
+  padding: 0 10px 0 20px;
   width: 95%;
 }
 .s-header__form__search-inp:focus {
@@ -233,6 +282,11 @@ ___________________________________________*/
       -ms-flex-pack: center;
           justify-content: center;
   cursor: pointer;
+  font-size: 35px;
+  color: rgba(255, 255, 255, 0.3);
+}
+.s-header__nav-item-wrapper:hover {
+  color: rgb(255, 255, 255);
 }
 .s-header__nav-item-wrapper__item {
   display: -webkit-box;
@@ -240,28 +294,8 @@ ___________________________________________*/
   display: flex;
   width: 50%;
 }
-.s-header__nav-item-wrapper__item:hover .s-header__nav-item-wrapper__item__svg-wrapper__text {
-  opacity: 1;
-}
 .s-header__nav-item-wrapper__item:not(:last-child) {
   margin-right: 15px;
-}
-
-.fa-bars {
-  font-size: 35px;
-  color: rgba(255, 255, 255, 0.3);
-}
-.fa-bars:hover {
-  color: rgb(255, 255, 255);
-}
-
-.fa-magnifying-glass {
-  color: white;
-}
-
-.fa-cart-shopping, .fa-user {
-  font-size: 21px;
-  margin-bottom: 10px;
 }
 
 .s-header__nav-item-wrapper__item__icon-wrapper__text {
@@ -272,6 +306,7 @@ ___________________________________________*/
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  font-size: 18px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -282,6 +317,9 @@ ___________________________________________*/
 }
 .s-header__nav-item-wrapper__item__icon-wrapper__text:hover {
   color: rgb(255, 255, 255);
+}
+.s-header__nav-item-wrapper__item__icon-wrapper__text .nav_icons {
+  font-size: 28px;
 }
 
 /* Center
@@ -380,7 +418,8 @@ ___________________________________________*/
   color: #e8ecee;
 }
 
-#slider_arrow__left, #slider_next {
+#slider_arrow__left,
+#slider_next {
   font-size: 45px;
   color: #cb11ab;
 }
@@ -391,36 +430,36 @@ ___________________________________________*/
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
 }
 .s-cards__item-wrapper {
+  width: 90%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr;
+  grid-template-columns: repeat(5, 1fr);
+  height: 800px;
+  overflow: hidden;
+  row-gap: 10px;
+  -webkit-column-gap: 10px;
+     -moz-column-gap: 10px;
+          column-gap: 10px;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+}
+.s-cards__item-wrapper__item {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-.s-cards__item-wrapper__item {
-  width: 23%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  height: 400px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -431,36 +470,39 @@ ___________________________________________*/
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0 0 25px 0;
-}
-.s-cards__item-wrapper__item:not(:nth-child(4n+4)) {
-  margin-right: 25px;
 }
 .s-cards__item-wrapper__item-img {
   width: 100%;
+  height: 60%;
   margin-bottom: 1%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  cursor: pointer;
 }
 .s-cards__item-wrapper__item__wrapper-text {
   width: 100%;
   text-align: start;
 }
+.s-cards__item-wrapper__item__wrapper-text__price {
+  font-size: 25px;
+  font-weight: 700;
+  cursor: pointer;
+}
+.s-cards__item-wrapper__item__wrapper-text__price:hover {
+  color: #cb11ab;
+}
 .s-cards__item-wrapper__item__wrapper-text__delivery-time {
   text-align: start;
 }
-.s-cards__item-wrapper__item__wrapper-text__svg-wrapper, .modal-cart-det__desc-wrap__svg-wrapper {
+.s-cards__item-wrapper__item__wrapper-text__icon-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 5px;
+  margin: 5px auto;
+  font-size: 14px;
 }
-.s-cards__item-wrapper__item__wrapper-text__svg-wrapper__svg, .modal-cart-det__desc-wrap__svg-wrapper__svg {
-  width: 25px;
-  height: 25px;
-}
-.s-cards__item-wrapper__item__wrapper-text__svg-wrapper__rate, .modal-cart-det__desc-wrap__svg-wrapper__rate {
-  width: 25px;
-  height: 25px;
-  font-size: 25px;
+.s-cards__item-wrapper__item__wrapper-text__icon-wrapper:hover > i {
+  color: yellow;
 }
 .s-cards__item-wrapper__item__btn, .modal-cart-det__desc-wrap__btn {
   color: white;
@@ -473,6 +515,14 @@ ___________________________________________*/
   color: #cb11ab;
   background-color: white;
 }
+.s-cards__item-wrapper__item__btn.__inCart, .__inCart.modal-cart-det__desc-wrap__btn {
+  color: #cb11ab;
+  background: lightgray;
+  border: none;
+}
+.s-cards__item-wrapper__active {
+  height: 1650px;
+}
 .s-cards__btn, .modal-s-cart__btn {
   width: 25%;
   color: #cb11ab;
@@ -482,7 +532,7 @@ ___________________________________________*/
 .s-cards__btn-show_more {
   margin-right: 1%;
 }
-.s-cards__btn__svg-wrapper {
+.s-cards__btn__icon-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -494,7 +544,7 @@ ___________________________________________*/
           justify-content: center;
   color: #cb11ab;
 }
-.s-cards__btn__svg-wrapper__svg {
+.s-cards__btn__icon-wrapper__svg {
   width: 15px;
   height: 15px;
   fill: #cb11ab;
@@ -515,6 +565,57 @@ ___________________________________________*/
   font-size: 35px;
   color: #cb11ab;
   margin-bottom: 25px;
+}
+
+/* Aside
+___________________________________________*/
+.aside {
+  width: 20%;
+  height: 100vh;
+  background: #fff;
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 2;
+  top: 110px;
+  visibility: hidden;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: all 0.6s ease-in-out;
+  transition: all 0.6s ease-in-out;
+  padding: 20px 0;
+}
+.aside__content {
+  width: 100%;
+}
+.aside__item {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+.aside__item:hover {
+  background-color: rgba(211, 211, 211, 0.3);
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.aside__active {
+  visibility: visible;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+.aside__link {
+  text-decoration: none;
+  color: #000;
 }
 
 /* Center
@@ -561,17 +662,24 @@ ___________________________________________*/
   min-width: 90px;
 }
 .s-footer__item__row {
-  opacity: 0.5;
+  color: rgba(255, 255, 255, 0.5);
   text-align: center;
+  font-size: 12px;
 }
 .s-footer__item__row:hover {
-  opacity: 1;
+  color: rgb(255, 255, 255);
 }
 .s-footer__item__row-title {
-  color: white;
-  opacity: 1;
+  color: rgb(255, 255, 255);
   cursor: default;
-  margin-bottom: 1%;
+  margin: 10px auto;
+  font-size: 16px;
+}
+.s-footer__item__row-content__text {
+  margin: 0 0 10px 0;
+}
+.s-footer__item__row-content__text i {
+  margin: 0 5px 0 0;
 }
 
 .footer-adapt {
@@ -588,48 +696,6 @@ ___________________________________________*/
 ___________________________________________*/
 /* Font Size
 ___________________________________________*/
-/*! Asaide
-/*!_________________________________________________________________*/
-.aside {
-  height: 100vh;
-  width: 200px;
-  position: absolute;
-  top: 106px;
-  left: 0;
-  z-index: 2;
-  background-color: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-.aside__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 35px;
-  padding: 0 5px 0 5px;
-}
-.aside__item:hover {
-  background-color: lightgrey;
-}
-.aside__item__svg {
-  width: 15px;
-}
-
-.aside {
-  display: none;
-}
-
 /*! Modal User
 /*!_________________________________________________________________*/
 .modal-user {
@@ -826,25 +892,17 @@ ___________________________________________*/
 /*! Media
 /*!_________________________________________________________________*/
 @media (max-width: 1450px) {
-  .s-cards__item-wrapper__item {
-    width: 21%;
-  }
-  .s-cards__item-wrapper__item:not(:nth-child(4n+4)) {
-    margin-right: 20px;
-  }
-  .s-cards__item-wrapper__item__wrapper-text__svg-wrapper__svg, .modal-cart-det__desc-wrap__svg-wrapper__svg {
-    width: 17px;
-    height: 17px;
-  }
-  .s-cards__item-wrapper__item__wrapper-text__svg-wrapper__rate, .modal-cart-det__desc-wrap__svg-wrapper__rate {
-    width: 17px;
-    height: 17px;
-    font-size: 17px;
+  .s-cards__item-wrapper {
+    -ms-grid-columns: (1fr)[4];
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 @media (max-width: 1075px) {
   .s-header__logo-text-wrapper {
     display: none;
+  }
+  .aside {
+    width: 40%;
   }
   .slider_btn_text {
     font-size: 30px;
@@ -863,29 +921,28 @@ ___________________________________________*/
   }
 }
 @media (max-width: 795px) {
+  .s-cards__item-wrapper {
+    -ms-grid-columns: (1fr)[3];
+    grid-template-columns: repeat(3, 1fr);
+  }
   .s-header__form {
     margin: 0 15px 0 15px;
   }
-  .s-cards__item-wrapper__item {
-    width: 40%;
-    margin: 0 15px 15px;
-  }
-  .s-cards__item-wrapper__item:not(:nth-child(4n+4)) {
-    margin-right: 15px;
-  }
 }
 @media (max-width: 610px) {
+  .s-cards__item-wrapper {
+    -ms-grid-columns: (1fr)[2];
+    grid-template-columns: repeat(2, 1fr);
+  }
   .s-cards__btn, .modal-s-cart__btn {
     width: 60%;
   }
-  .s-footer, .footer {
+  .s-footer,
+.footer {
     display: none;
   }
   .main {
     border-radius: 24px 24px 0 0;
-  }
-  .s-header__burger-wrapper {
-    display: none;
   }
   .s-header__nav-item-wrapper {
     display: none;
@@ -927,20 +984,19 @@ ___________________________________________*/
         -ms-flex-pack: center;
             justify-content: center;
     width: 33.3%;
+    color: rgba(255, 255, 255, 0.4);
+  }
+  .footer-adapt__wrap__item:hover {
+    color: rgba(255, 255, 255, 0.8);
   }
   .footer-adapt__wrap__item .fa-solid {
     font-size: 25px;
     margin: 0;
-    color: rgba(255, 255, 255, 0.3);
   }
 }
 @media (max-width: 500px) {
-  .s-cards__item-wrapper__item {
-    width: 90%;
-    margin: 0 10px 10px;
-  }
-  .s-cards__item-wrapper__item:not(:nth-child(4n+4)) {
-    margin-right: 10px;
+  .aside {
+    width: 100%;
   }
   .s-cards__item-wrapper__item__wrapper-text {
     text-align: center;
@@ -948,7 +1004,7 @@ ___________________________________________*/
   .s-cards__item-wrapper__item__wrapper-text__delivery-time {
     text-align: center;
   }
-  .s-cards__item-wrapper__item__wrapper-text__svg-wrapper, .modal-cart-det__desc-wrap__svg-wrapper {
+  .s-cards__item-wrapper__item__wrapper-text__svg-wrapper {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -958,24 +1014,15 @@ ___________________________________________*/
   }
 }
 @media (max-width: 450px) {
+  .s-cards__item-wrapper {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
   .s-header {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
   .s-header__form {
     width: 60%;
-  }
-  .s-header__nav-item-wrapper {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .s-header__nav-item-wrapper__item {
-    width: 25%;
-    margin: 0 0 0 auto;
-  }
-  .s-header__nav-item-wrapper__item:not(:last-child) {
-    margin: 0 0 0 auto;
   }
 }
