--- a/scss/media.scss
+++ b/scss/media.scss
@@ -7,6 +7,11 @@
   grid-template-columns: repeat(4, 1fr);
  }
 }
+@media (max-width: 1255px) {
+  .s-cards__item-wrapper {
+    grid-template-columns: repeat(3, 1fr);//todo 3 фракции слишком поздно включаются, картинки плоские у тебя выходят
+   }
+}
 @media (max-width: 1075px) {
   .s-header__logo-text-wrapper {
     display: none;
@@ -30,9 +35,10 @@
     font-size: 25px;
   }
 }
-@media (max-width: 795px) {
+
+@media (max-width: 800px) {//todo тут тоже их слишком сжимает
   .s-cards__item-wrapper {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
    }
   .s-header__form {
     margin: 0 15px 0 15px;
@@ -93,6 +99,19 @@
   .aside {
     width: 100%;
   }
+
+
+}
+@media (max-width: 600px) {
+  .s-cards__item-wrapper {
+    grid-template-columns:  1fr;
+   }
+  .s-header {
+    flex-wrap: nowrap;
+  }
+  .s-header__form {
+    width: 73%;
+  }
   .s-cards__item-wrapper__item__wrapper-text {
     text-align: center;
     &__delivery-time {
@@ -102,18 +121,10 @@
       justify-content: center;
     }
   }
+  .s-cards__item-wrapper__item__wrapper-text__icon-wrapper{
+    display:flex; justify-content: center; // todo это точно нужно
+  }
   .s-cards__item-wrapper__item__btn {
     width: 100%;
-  }
-}
-@media (max-width: 450px) {
-  .s-cards__item-wrapper {
-    grid-template-columns:  1fr;
-   }
-  .s-header {
-    flex-wrap: nowrap;
-  }
-  .s-header__form {
-    width: 60%;
   }
 }
