--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,7 @@ ___________________________________________*/
   background-color: transparent;
   border: none;
   color: #fff;
+  font-size: 16px;
   padding: 0 10px 0 20px;
   width: 95%;
 }
@@ -454,6 +455,10 @@ ___________________________________________*/
   -webkit-transition: all 1s;
   transition: all 1s;
 }
+.s-cards__item-wrapper.empty_wrapper {
+  -ms-grid-columns: (1fr)[1];
+  grid-template-columns: repeat(1, 1fr);
+}
 .s-cards__item-wrapper__item {
   width: 100%;
   display: -webkit-box;
@@ -616,6 +621,13 @@ ___________________________________________*/
 .aside__link {
   text-decoration: none;
   color: #000;
+}
+
+.cards__wrapper-empty {
+  width: 100%;
+  font-size: 25px;
+  color: #cb11ab;
+  font-weight: 700;
 }
 
 /* Center
