--- a/scss/header.scss
+++ b/scss/header.scss
@@ -58,6 +58,7 @@
       background-color: transparent;
       border: none;
       color: #fff;
+      font-size: 16px;
       padding: 0 10px 0 20px;
       @include widthInp;
       &:focus {
