--- a/scss/main.scss
+++ b/scss/main.scss
@@ -88,6 +88,9 @@ ___________________________________________*/
     row-gap: 10px;
     column-gap: 10px;
     transition: all 1s;
+    &.empty_wrapper{
+      grid-template-columns: repeat(1, 1fr); 
+    }
     &__item {
       width: 100%;
       display: flex;
@@ -221,5 +224,13 @@ ___________________________________________*/
         text-decoration: none;
         color: #000;
     }
+}
+
+
+.cards__wrapper-empty {
+  width: 100%;
+  font-size: 25px;
+  color: $pinkWB;
+  font-weight: 700;
 }
 
